--- a/HostingDemo/public/index.html
+++ b/HostingDemo/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <title>My Website</title>
 </head>
 <body>
+    <h1>Welcome to My Website</h1>
+    <a href="myapp://" style="font-size: 32px;">Open My App</a> <br>
+    <a href="myapp:/driver?id=1&name=tuan" style="font-size: 32px;">Driver</a>
 </body>
 </html>
